--- a/package.json
+++ b/package.json
@@ -25,42 +25,42 @@
     "@fortawesome/free-solid-svg-icons": "6.7.2",
     "@fortawesome/react-fontawesome": "0.2.2",
     "@fortawesome/react-native-fontawesome": "0.3.2",
-    "@lottiefiles/dotlottie-react": "0.12.0",
-    "@lottiefiles/react-lottie-player": "3.5.4",
-    "@react-native-async-storage/async-storage": "2.1.0",
-    "@react-native-clipboard/clipboard": "1.15.0",
+    "@lottiefiles/dotlottie-react": "0.13.0",
+    "@lottiefiles/react-lottie-player": "3.6.0",
+    "@react-native-async-storage/async-storage": "2.1.1",
+    "@react-native-clipboard/clipboard": "1.16.1",
     "@react-native-community/checkbox": "0.5.17",
     "@react-native-community/slider": "4.5.5",
-    "@react-native-picker/picker": "2.10.2",
-    "@react-native/assets-registry": "0.76.5",
+    "@react-native-picker/picker": "2.11.0",
+    "@react-native/assets-registry": "0.77.1",
     "@react-spring/native": "9.7.5",
     "@react-spring/web": "9.7.5",
-    "@sentry/react-native": "6.5.0",
-    "@sentry/webpack-plugin": "2.22.7",
+    "@sentry/react-native": "6.7.0",
+    "@sentry/webpack-plugin": "3.1.2",
     "@yudiel/react-qr-scanner": "2.1.0",
     "axios": "1.7.9",
     "bcrypt-react-native": "1.1.1",
-    "bcryptjs": "2.4.3",
+    "bcryptjs": "3.0.0",
     "bech32": "2.0.0",
     "bip322-js": "2.0.0",
     "bip39": "3.1.0",
     "bip84": "0.2.9",
     "bitbox-api": "0.8.0",
-    "bitcoin-address-validation": "2.2.3",
+    "bitcoin-address-validation": "3.0.0",
     "bitcoinjs-lib": "7.0.0-rc.0",
     "crypto-browserify": "3.12.1",
     "date-fns": "4.1.0",
     "ecpair": "3.0.0-rc.0",
     "email-validator": "2.0.4",
-    "i18next": "24.2.0",
-    "i18next-browser-languagedetector": "8.0.2",
+    "i18next": "24.2.2",
+    "i18next-browser-languagedetector": "8.0.3",
     "ibantools": "4.5.1",
     "is-valid-zipcode": "1.0.3",
     "js-crypto-hmac": "1.0.7",
     "js-encoding-utils": "0.7.3",
     "js-lnurl": "0.6.0",
-    "locale-currency": "0.0.2",
-    "lottie-react-native": "7.1.0",
+    "locale-currency": "0.0.4",
+    "lottie-react-native": "7.2.2",
     "lottie-web": "5.12.2",
     "node-libs-react-native": "1.2.1",
     "patch-package": "8.0.0",
@@ -69,54 +69,54 @@
     "react-device-detect": "2.2.3",
     "react-dom": "18.3.1",
     "react-hook-form": "7.54.2",
-    "react-i18next": "15.2.0",
-    "react-native": "0.76.5",
+    "react-i18next": "15.4.0",
+    "react-native": "0.77.1",
     "react-native-animated-linear-gradient": "1.3.0",
     "react-native-barcode-zxing-scan": "1.0.2",
     "react-native-bars": "2.4.3",
     "react-native-biometrics": "3.0.1",
     "react-native-blur-effect": "1.1.3",
-    "react-native-bootsplash": "6.3.2",
-    "react-native-config": "1.5.3",
+    "react-native-bootsplash": "6.3.3",
+    "react-native-config": "1.5.5",
     "react-native-countdown-circle-timer": "3.2.1",
     "react-native-device-detection": "0.2.1",
-    "react-native-device-info": "14.0.2",
+    "react-native-device-info": "14.0.4",
     "react-native-dotenv": "3.4.11",
     "react-native-encrypted-storage": "4.0.3",
     "react-native-error-boundary": "1.2.7",
     "react-native-fast-image": "8.6.3",
     "react-native-fs": "2.20.0",
-    "react-native-get-random-values": "^1.11.0",
-    "react-native-keychain": "9.2.2",
+    "react-native-get-random-values": "1.11.0",
+    "react-native-keychain": "9.2.3",
     "react-native-linear-gradient": "2.8.3",
     "react-native-nfc-manager": "3.16.1",
     "react-native-nyx-printer": "github:SwissBitcoinPay/react-native-nyx-printer#4b31680",
     "react-native-picker-select": "9.3.1",
     "react-native-progress": "5.0.1",
-    "react-native-qrcode-svg": "6.3.12",
-    "react-native-safe-area-context": "5.0.0",
+    "react-native-qrcode-svg": "6.3.14",
+    "react-native-safe-area-context": "5.2.0",
     "react-native-screenguard": "1.0.4",
     "react-native-screenshot-prevent": "1.2.1",
     "react-native-securerandom": "1.0.1",
-    "react-native-ssl-public-key-pinning": "1.2.4",
-    "react-native-svg": "15.10.1",
+    "react-native-ssl-public-key-pinning": "1.2.5",
+    "react-native-svg": "15.11.1",
     "react-native-text-size": "4.0.0-rc.1",
     "react-native-toast-notifications": "3.4.0",
-    "react-native-use-keyboard": "1.0.0",
-    "react-native-video": "6.8.2",
+    "react-native-use-keyboard": "1.1.0",
+    "react-native-video": "6.10.1",
     "react-native-vision-camera": "4.6.3",
     "react-native-web": "0.19.13",
     "react-native-web-linear-gradient": "1.1.2",
-    "react-native-webview": "13.12.5",
+    "react-native-webview": "13.13.2",
     "react-refresh": "0.16.0",
-    "react-router-dom": "7.1.1",
-    "react-router-native": "6.28.1",
+    "react-router-dom": "7.1.5",
+    "react-router-native": "6.29.0",
     "react-secure-storage": "1.3.2",
-    "react-use-websocket": "4.11.1",
+    "react-use-websocket": "4.13.0",
     "stream-browserify": "3.0.0",
-    "styled-components": "6.1.13",
+    "styled-components": "6.1.15",
     "use-previous": "1.2.0",
-    "uuid": "^11.0.3",
+    "uuid": "11.0.5",
     "vm-browserify": "1.1.2",
     "xpub-converter": "1.0.2"
   },
@@ -136,38 +136,38 @@
     "node": ">=18"
   },
   "devDependencies": {
-    "@babel/core": "7.26.0",
+    "@babel/core": "7.26.9",
     "@babel/plugin-transform-classes": "7.25.9",
     "@babel/plugin-transform-export-namespace-from": "7.25.9",
-    "@babel/preset-env": "7.26.0",
-    "@babel/runtime": "7.26.0",
+    "@babel/preset-env": "7.26.9",
+    "@babel/runtime": "7.26.9",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.15",
     "@react-native-community/cli": "15.1.3",
     "@react-native-community/cli-platform-android": "15.1.3",
     "@react-native-community/cli-platform-ios": "15.1.3",
     "@react-native-community/eslint-config": "3.2.0",
-    "@react-native/babel-preset": "0.76.5",
-    "@react-native/eslint-config": "0.76.5",
-    "@react-native/metro-config": "0.76.5",
-    "@react-native/typescript-config": "0.76.5",
+    "@react-native/babel-preset": "0.77.1",
+    "@react-native/eslint-config": "0.77.1",
+    "@react-native/metro-config": "0.77.1",
+    "@react-native/typescript-config": "0.77.1",
     "@svgr/webpack": "8.1.0",
     "@tsconfig/react-native": "3.0.5",
     "@types/bcryptjs": "2.4.6",
     "@types/encodeurl": "1.0.2",
     "@types/is-valid-zipcode": "1.0.2",
     "@types/jest": "29.5.14",
-    "@types/node": "22.10.2",
-    "@types/react": "19.0.2",
+    "@types/node": "22.13.4",
+    "@types/react": "19.0.8",
     "@types/react-click-outside-hook": "1.0.3",
-    "@types/react-dom": "19.0.2",
+    "@types/react-dom": "19.0.3",
     "@types/react-native": "0.73.0",
     "@types/react-native-material-ripple": "0.9.6",
     "@types/react-native-svg-animated-linear-gradient": "0.4.3",
     "@types/react-native-web": "0.19.0",
     "@types/react-test-renderer": "19.0.0",
     "@types/styled-components": "5.1.34",
-    "@typescript-eslint/eslint-plugin": "8.18.2",
-    "@typescript-eslint/parser": "8.18.2",
+    "@typescript-eslint/eslint-plugin": "8.24.0",
+    "@typescript-eslint/parser": "8.24.0",
     "ajv": "8.17.1",
     "babel-jest": "29.7.0",
     "babel-loader": "9.2.1",
@@ -177,8 +177,8 @@
     "clean-webpack-plugin": "4.0.0",
     "css-loader": "7.1.2",
     "dotenv": "16.4.7",
-    "eslint": "9.17.0",
-    "eslint-config-prettier": "9.1.0",
+    "eslint": "9.20.1",
+    "eslint-config-prettier": "10.0.1",
     "eslint-import-resolver-babel-module": "5.3.2",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-module-resolver": "1.5.0",
@@ -187,16 +187,16 @@
     "jest": "29.7.0",
     "lodash-webpack-plugin": "0.11.6",
     "node-loader": "2.1.0",
-    "prettier": "3.4.2",
+    "prettier": "3.5.1",
     "react-native-svg-transformer": "1.5.0",
     "style-loader": "4.0.0",
     "ts-essentials": "10.0.4",
     "tsconfig-paths-webpack-plugin": "4.2.0",
-    "typescript": "5.7.2",
+    "typescript": "5.7.3",
     "typescript-plugin-styled-components": "3.0.0",
     "url": "0.11.4",
     "web-vitals": "4.2.4",
-    "webpack": "5.97.1",
+    "webpack": "5.98.0",
     "webpack-cli": "6.0.1",
     "webpack-dev-server": "5.2.0"
   }
