--- a/package.json
+++ b/package.json
@@ -25,25 +25,25 @@
     "@fortawesome/free-solid-svg-icons": "6.7.2",
     "@fortawesome/react-fontawesome": "0.2.2",
     "@fortawesome/react-native-fontawesome": "0.3.2",
-    "@ledgerhq/hw-app-btc": "10.6.0",
-    "@ledgerhq/hw-transport-webhid": "6.30.0",
-    "@ledgerhq/hw-transport-webusb": "6.29.4",
-    "@ledgerhq/react-native-hid": "6.32.4",
-    "@ledgerhq/react-native-hw-transport-ble": "6.34.0",
+    "@ledgerhq/hw-app-btc": "10.11.0",
+    "@ledgerhq/hw-transport-webhid": "6.30.6",
+    "@ledgerhq/hw-transport-webusb": "6.29.10",
+    "@ledgerhq/react-native-hid": "6.32.10",
+    "@ledgerhq/react-native-hw-transport-ble": "6.35.3",
     "@lottiefiles/dotlottie-react": "0.13.0",
     "@lottiefiles/react-lottie-player": "3.6.0",
-    "@react-native-async-storage/async-storage": "2.1.1",
-    "@react-native-clipboard/clipboard": "1.16.1",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-clipboard/clipboard": "1.16.3",
     "@react-native-community/blur": "4.4.1",
     "@react-native-community/checkbox": "0.5.17",
     "@react-native-community/slider": "4.5.5",
-    "@react-native-picker/picker": "2.11.1",
+    "@react-native-picker/picker": "2.11.2",
     "@react-native/assets-registry": "0.77.1",
     "@react-spring/native": "9.7.5",
     "@react-spring/web": "9.7.5",
     "@sentry/react-native": "6.17.0",
     "@sentry/webpack-plugin": "3.1.2",
-    "@trezor/connect-web": "9.6.2",
+    "@trezor/connect-web": "9.6.3",
     "@yudiel/react-qr-scanner": "2.1.0",
     "axios": "1.7.9",
     "bech32": "2.0.0",
@@ -55,7 +55,7 @@
     "bitcoinjs-lib": "7.0.0-rc.0",
     "crypto-browserify": "3.12.1",
     "date-fns": "4.1.0",
-    "ecpair": "3.0.0-rc.0",
+    "ecpair": "3.0.0",
     "email-validator": "2.0.4",
     "i18next": "24.2.2",
     "i18next-browser-languagedetector": "8.0.3",
@@ -82,8 +82,8 @@
     "react-native-bars": "2.4.3",
     "react-native-biometrics": "3.0.1",
     "react-native-ble-plx": "3.4.0",
-    "react-native-bootsplash": "6.3.3",
-    "react-native-config": "1.5.5",
+    "react-native-bootsplash": "6.3.11",
+    "react-native-config": "1.5.9",
     "react-native-countdown-circle-timer": "3.2.1",
     "react-native-device-detection": "0.2.1",
     "react-native-device-info": "14.0.4",
@@ -95,22 +95,22 @@
     "react-native-get-random-values": "1.11.0",
     "react-native-keychain": "9.2.3",
     "react-native-linear-gradient": "2.8.3",
-    "react-native-nfc-manager": "3.16.1",
+    "react-native-nfc-manager": "3.16.3",
     "react-native-nyx-printer": "github:SwissBitcoinPay/react-native-nyx-printer#83b4006",
     "react-native-picker-select": "9.3.1",
     "react-native-progress": "5.0.1",
-    "react-native-qrcode-svg": "6.3.14",
+    "react-native-qrcode-svg": "6.3.15",
     "react-native-safe-area-context": "5.2.0",
     "react-native-screenguard": "1.0.4",
     "react-native-screenshot-prevent": "1.2.1",
     "react-native-securerandom": "1.0.1",
-    "react-native-ssl-public-key-pinning": "1.2.5",
+    "react-native-ssl-public-key-pinning": "1.2.6",
     "react-native-svg": "15.11.1",
     "react-native-text-size": "4.0.0-rc.1",
     "react-native-toast-notifications": "3.4.0",
     "react-native-use-keyboard": "1.1.0",
     "react-native-video": "6.10.1",
-    "react-native-vision-camera": "4.7.1",
+    "react-native-vision-camera": "4.7.2",
     "react-native-web": "0.19.13",
     "react-native-web-linear-gradient": "1.1.2",
     "react-native-webview": "13.15.0",
@@ -119,11 +119,11 @@
     "react-router-native": "6.29.0",
     "react-use-websocket": "4.13.0",
     "stream-browserify": "3.0.0",
-    "styled-components": "6.1.15",
+    "styled-components": "6.1.19",
     "use-previous": "1.2.0",
     "uuid": "11.0.5",
     "vm-browserify": "1.1.2",
-    "xpub-converter": "1.0.2"
+    "xpub-converter": "1.0.3"
   },
   "browserslist": {
     "production": [
@@ -141,14 +141,14 @@
     "node": ">=18"
   },
   "devDependencies": {
-    "@babel/core": "7.26.9",
-    "@babel/plugin-transform-classes": "7.25.9",
-    "@babel/plugin-transform-export-namespace-from": "7.25.9",
-    "@babel/preset-env": "7.26.9",
-    "@babel/runtime": "7.26.9",
-    "@eslint/compat": "1.2.7",
-    "@eslint/eslintrc": "3.3.0",
-    "@eslint/js": "9.21.0",
+    "@babel/core": "7.28.4",
+    "@babel/plugin-transform-classes": "7.28.4",
+    "@babel/plugin-transform-export-namespace-from": "7.27.1",
+    "@babel/preset-env": "7.28.3",
+    "@babel/runtime": "7.28.4",
+    "@eslint/compat": "1.3.2",
+    "@eslint/eslintrc": "3.3.1",
+    "@eslint/js": "9.36.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.15",
     "@react-native-community/cli": "15.1.3",
     "@react-native-community/cli-platform-android": "15.1.3",
@@ -159,9 +159,9 @@
     "@react-native/metro-config": "0.77.2",
     "@react-native/typescript-config": "0.77.2",
     "@svgr/webpack": "8.1.0",
-    "@tsconfig/react-native": "3.0.5",
+    "@tsconfig/react-native": "3.0.7",
     "@types/bcryptjs": "2.4.6",
-    "@types/encodeurl": "1.0.2",
+    "@types/encodeurl": "1.0.3",
     "@types/is-valid-zipcode": "1.0.2",
     "@types/jest": "29.5.14",
     "@types/node": "22.13.4",
@@ -191,12 +191,12 @@
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-module-resolver": "1.5.0",
     "eslint-plugin-react-hooks": "5.1.0",
-    "html-webpack-plugin": "5.6.3",
+    "html-webpack-plugin": "5.6.4",
     "jest": "29.7.0",
     "lodash-webpack-plugin": "0.11.6",
     "node-loader": "2.1.0",
     "prettier": "3.5.1",
-    "react-native-svg-transformer": "1.5.0",
+    "react-native-svg-transformer": "1.5.1",
     "style-loader": "4.0.0",
     "ts-essentials": "10.0.4",
     "tsconfig-paths-webpack-plugin": "4.2.0",
@@ -206,6 +206,6 @@
     "web-vitals": "4.2.4",
     "webpack": "5.98.0",
     "webpack-cli": "6.0.1",
-    "webpack-dev-server": "5.2.0"
+    "webpack-dev-server": "5.2.2"
   }
 }
